--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 This is some text.
 <br>
 
-<a href="https://www.google.com"> Here is a better site.</a>
+<a href="http://www.google.com"> Here is a better site.</a>
