--- a/index.html
+++ b/index.html
@@ -1,8 +1,40 @@
 <h1>
-    This is a header
+    Weather Analysis
 </h1>
 
-This is some text.
+<h2>
+    About the project
+</h2>
+What's the weather like as we approach the equator?
 <br>
 
-<a href="http://www.google.com"> Here is a better site.</a>
+<img  src="https://columbia.bootcampcontent.com/columbia-bootcamp/CU-NYC-DATA-PT-02-2020-U-C/raw/master/06-Python-APIs/homework/assignment/Images/equatorsign.png">
+
+<h2>
+    WeatherPy
+</h2>
+
+Temperature (F) vs. Latitude
+Humidity (%) vs. Latitude
+Cloudiness (%) vs. Latitude
+Wind Speed (mph) vs. Latitude
+
+After each plot add a sentence or too explaining what the code is and analyzing.
+Your next objective is to run linear regression on each relationship, only this time separating them into Northern Hemisphere (greater than or equal to 0 degrees latitude) and Southern Hemisphere (less than 0 degrees latitude):
+
+Northern Hemisphere - Temperature (F) vs. Latitude
+Southern Hemisphere - Temperature (F) vs. Latitude
+Northern Hemisphere - Humidity (%) vs. Latitude
+Southern Hemisphere - Humidity (%) vs. Latitude
+Northern Hemisphere - Cloudiness (%) vs. Latitude
+Southern Hemisphere - Cloudiness (%) vs. Latitude
+Northern Hemisphere - Wind Speed (mph) vs. Latitude
+Southern Hemisphere - Wind Speed (mph) vs. Latitude
+
+After each pair of plots explain what the linear regression is modelling such as any relationships you notice and any other analysis you may have.
+Your final notebook must:
+
+Randomly select at least 500 unique (non-repeat) cities based on latitude and longitude.
+Perform a weather check on each of the cities using a series of successive API calls.
+Include a print log of each city as it's being processed with the city number and city name.
+Save a CSV of all retrieved data and a PNG image for each scatter plot.
