--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 What's the weather like as we approach the equator?
 <br>
 
-<img  src="https://columbia.bootcampcontent.com/columbia-bootcamp/CU-NYC-DATA-PT-02-2020-U-C/raw/master/06-Python-APIs/homework/assignment/Images/equatorsign.png">
+<img  height='200' src="https://columbia.bootcampcontent.com/columbia-bootcamp/CU-NYC-DATA-PT-02-2020-U-C/raw/master/06-Python-APIs/homework/assignment/Images/equatorsign.png">
 
 <h2>
     WeatherPy
